Fixing broken links in using
Pre-release updates to Using automation execution

https://issues.redhat.com/browse/AAP-31370

Affects `titles/controller-user-guide`

--- a/downstream/assemblies/platform/assembly-controller-best-practices.adoc
+++ b/downstream/assemblies/platform/assembly-controller-best-practices.adoc
@@ -52,7 +52,7 @@ Use the "callback" feature to permit newly booting instances to request configur
 == Larger Host Counts
 
 Set "forks" on a job template to larger values to increase parallelism of execution runs. 
-For more information on tuning Ansible, see link:https://www.ansible.com/blog/ansible-performance-tuning[the Ansible blog].
+//For more information about tuning Ansible, see link:https://www.ansible.com/blog/ansible-performance-tuning[the Ansible blog].
 
 == Continuous integration / Continuous Deployment
 
