--- a/downstream/assemblies/platform/assembly-controller-topology-viewer.adoc
+++ b/downstream/assemblies/platform/assembly-controller-topology-viewer.adoc
@@ -6,8 +6,8 @@ Use the *Topology View* to view node type, node health, and specific details abo
 
 To access the topology viewer from the {ControllerName} UI, you must have *System Administrator* permissions. 
 
-For more information about {AutomationMesh} on a VM-based installation, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/index[{PlatformName} {AutomationMesh} guide for VM-based installations].
+For more information about {AutomationMesh} on a VM-based installation, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_vm_environments/index[{AutomationMeshStart} for VM environments].
 
-For more information about {AutomationMesh} on an operator-based installation, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/index[{PlatformName} {AutomationMesh} for operator-based installations].
+For more information about {AutomationMesh} on an operator-based installation, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/index[{AutomationMeshStart} for managed cloud or operator environments].
 
 include::platform/proc-controller-access-topology-viewer.adoc[leveloffset=+1]
