--- a/downstream/modules/platform/proc-controller-access-topology-viewer.adoc
+++ b/downstream/modules/platform/proc-controller-access-topology-viewer.adoc
@@ -22,9 +22,9 @@ To reset the view to its default view, click the *Reset view* (image:reset.png[R
 
 . Refer to the *Legend* to identify the type of nodes that are represented.
 +
-For VM-based installations, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide_for_vm-based_installations/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes]
+For VM-based installations, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_vm_environments/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes].
 +
-For operator-based installations, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_for_operator-based_installations/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes] for more information about each type of node.
+For operator-based installations, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_mesh_for_managed_cloud_or_operator_environments/assembly-planning-mesh#con-automation-mesh-node-types[Control and execution planes] for more information about each type of node.
 +
 //Not relevant in the 2.5 UI:
 //[NOTE]
