--- a/downstream/modules/platform/proc-controller-adding-a-project.adoc
+++ b/downstream/modules/platform/proc-controller-adding-a-project.adoc
@@ -16,7 +16,7 @@ You can create a logical collection of playbooks, called projects in {Controller
 * Optional: *Description*
 * *Organization* (required): A project must have at least one organization. Select one organization now to create the project. When the project is created you can add additional organizations.
 * Optional: *Execution environment*: Enter the name of the {ExecEnvShort} or search from a list of existing ones to run this project.
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/upgrading-to-ees[Migrating to automation execution environments] in the _Red Hat Ansible Automation Platform Upgrade and Migration Guide_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/creating_and_using_execution_environments/index[Creating and using execution environments].
 * *Source control type* (required): Select an SCM type associated with this project from the menu.
 Options in the following sections become available depending on the type chosen.
 For more information, see xref:proc-projects-manage-playbooks-manually[Managing playbooks manually] or xref:ref-projects-manage-playbooks-with-source-control[Managing playbooks using source control].
