--- a/downstream/modules/platform/ref-controller-export-old-scripts.adoc
+++ b/downstream/modules/platform/ref-controller-export-old-scripts.adoc
@@ -67,5 +67,5 @@ $ ansible-inventory -i ./my_scripts/_11__inventory_script_upperorder --list --ex
 In the preceding example, you can `cd` into `my_scripts` and then issue a `git init` command, add the scripts you want, push it to source control,
 and then create an SCM inventory source in the user interface.
 
-For more information on syncing or using custom inventory scripts, see link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-inventory-file-importing[Inventory file importing] in _{ControllerAG}_.
+For more information about syncing or using custom inventory scripts, see link:{URLControllerAdminGuide}/assembly-inventory-file-importing[Inventory file importing] in _{ControllerAG}_.
 
