--- a/downstream/modules/platform/con-controller-configure-hostname-notifications.adoc
+++ b/downstream/modules/platform/con-controller-configure-hostname-notifications.adoc
@@ -2,7 +2,7 @@
 
 = Configure the host hostname for notifications
 
-In link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-config#controller-configure-system[System settings], you can replace the default value in the *Base URL of the service* field with your preferred hostname to change the notification hostname.
+In link:{URLControllerAdminGuide}/controller-config#controller-configure-system[System settings], you can replace the default value in the *Base URL of the service* field with your preferred hostname to change the notification hostname.
 
 //image::ug-system-misc-baseurl.png[System Base URL]
 
