--- a/downstream/modules/platform/proc-controller-sourced-from-project.adoc
+++ b/downstream/modules/platform/proc-controller-sourced-from-project.adoc
@@ -35,7 +35,7 @@ image:inventories-create-source-sourced-from-project-filter.png[image]
 . Optional: You can specify the verbosity, host filter, enabled variable/value, and update options as described in xref:proc-controller-add-source[Adding a source].
 . Optional: To pass to the custom inventory script, you can set environment variables in the *Source variables* field.
 You can also place inventory scripts in source control and then run it from a project.
-For more information, see link:{BaseURL}red_hat_ansible_automation_platform/2.4/html-single/configuring_automation_execution/index#assembly-inventory-file-importing[Inventory File Importing] in _{ControllerAG}_.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/configuring_automation_execution/assembly-inventory-file-importing[Inventory File Importing] in _{ControllerAG}_.
 //+
 //image:inventories-create-source-sourced-from-project-example.png[Inventories - create source - sourced from project example]
 
