--- a/downstream/modules/platform/proc-projects-using-collections-with-hub.adoc
+++ b/downstream/modules/platform/proc-projects-using-collections-with-hub.adoc
@@ -17,8 +17,8 @@ Use the following procedure to connect to {PrivateHubName} or {HubName}, the onl
 . Create a credential by choosing one of the following options:
 .. To use {HubName}, create an {HubName} credential by using the copied token and pointing to the URLs shown in the *Server URL* and *SSO URL* fields of the token page:
 +
-* *Galaxy Server URL* = `https://console.redhat.com/api/automation-hub/`
-* *AUTH SEVER URL* = `https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token`
+* *Galaxy Server URL* = `https://console.redhat.com/ansible/automation-hub/token`
+//* *AUTH SERVER URL* = `https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token`
 +
 .. To use {PrivateHubName}, create an {HubName} credential using a token retrieved from the *Repo Management* dashboard of your {PrivateHubName} and pointing to the published repository URL as shown:
 //+
@@ -33,7 +33,7 @@ For each repository in {Hubname} you must create a different credential.
 +
 //image:projects-create-ah-credential.png[Create hub credential]
 +
-For UI specific instructions, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/managing_content_in_automation_hub/managing-cert-valid-content[Red Hat Certified, validated, and Ansible Galaxy content in automation hub].
+For UI specific instructions, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/managing_automation_content/managing-cert-valid-content[Red Hat Certified, validated, and Ansible Galaxy content in automation hub].
 
 . Go to the organization for which you want to synchronize content from and add the new credential to the organization. 
 This enables you to associate each organization with the credential, or repository, that you want to use content from.
@@ -54,7 +54,7 @@ Then you can assign different levels of access to different organizations.
 For example, you can create a `Developers` organization that has access to both repository, while an Operations
 organization just has access to the *Prod* repository only.
 +
-For UI specific instructions, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/managing_content_in_automation_hub/index#configuring-user-access-containers[Configuring user access for container repositories in private automation hub].
+For UI specific instructions, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/managing_automation_content/index#configuring-user-access-containers[Configuring user access for container repositories in private automation hub].
 
 . If {HubName} has self-signed certificates, use the toggle to enable the setting *Ignore Ansible Galaxy SSL Certificate Verification* in *Job Settings*. 
 For {HubName}, which uses a signed certificate, use the toggle to disable it instead. This is a global setting:
