--- a/downstream/assemblies/devtools/assembly-rhdh-ocp-configure-optional.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-ocp-configure-optional.adoc
@@ -3,7 +3,7 @@ ifdef::context[:parent-context-of-rhdh-ocp-configure-optional: {context}]
 
 = Optional configuration for Ansible plug-ins
 
-:context: rhdh-ocp-configure-optional
+:context: rhdh-ocp-configure-optional_{parent-context-of-rhdh-ocp-configure-optional}
 [role="_abstract"]
 
 include::devtools/proc-rhdh-enable-rhdh-authentication.adoc[leveloffset=+1]
@@ -13,4 +13,6 @@ include::devtools/proc-rhdh-configure-pah-url.adoc[leveloffset=+2]
 
 ifdef::parent-context-of-rhdh-ocp-configure-optional[:context: {parent-context-of-rhdh-ocp-configure-optional}]
 ifndef::parent-context-of-rhdh-ocp-configure-optional[:!context:]
+
+ifdef::context[:parent-context-of-assembly: {context}]
 
