--- a/downstream/modules/devtools/proc-rhdh-configure-devspaces.adoc
+++ b/downstream/modules/devtools/proc-rhdh-configure-devspaces.adoc
@@ -13,7 +13,8 @@ The plug-ins will function without it.
 It is a separate Red Hat product and is not included in the {PlatformNameShort} or {RHDH} subscription.
 ====
 
-If the OpenShift Dev Spaces link is not configured in the Ansible plug-ins, the *Go to OpenShift Dev Spaces dashboard* link in the *4.DEVELOP* section of the Ansible plug-ins landing page redirects users to the
+If the OpenShift Dev Spaces link is not configured in the Ansible plug-ins,
+the *Go to OpenShift Dev Spaces dashboard* link in the *DEVELOP* section of the Ansible plug-ins landing page redirects users to the
 link:https://www.redhat.com/en/technologies/management/ansible/development-tools[Ansible development tools home page].
 
 .Prerequisites
