--- a/downstream/modules/devtools/proc-rhdh-configure-optional-integrations.adoc
+++ b/downstream/modules/devtools/proc-rhdh-configure-optional-integrations.adoc
@@ -9,5 +9,5 @@ The Ansible plug-ins provide integrations with {PlatformNameShort} and other opt
 // link:{BaseURL}/red_hat_developer_hub/1.2/html-single/administration_guide_for_red_hat_developer_hub/assembly-install-rhdh-ocp#proc-add-custom-app-file-openshift-helm_assembly-install-rhdh-ocp[Adding a custom application configuration file to OpenShift Container Platform using the Helm chart] of the _Administration guide for Red Hat Developer Hub_.
 // 
 
-To edit your custom ConfigMap, log in to the OpenShift UI and navigate to menu:Select Project ( developerHubProj )[ConfigMaps > {developer-hub}-app-config > EditConfigMaps > app-config-rhdh].
+To edit your custom ConfigMap, log in to the OpenShift UI and navigate to menu:Select Project ( developerHubProj )[ConfigMaps > {developer-hub}-app-config-rhdh > app-config-rhdh].
 
