--- a/downstream/modules/devtools/proc-rhdh-create-custom-configmap-operator-install.adoc
+++ b/downstream/modules/devtools/proc-rhdh-create-custom-configmap-operator-install.adoc
@@ -1,9 +1,9 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="rhdh-create-custom-configmap-operator-install_{context}"]
-= Creating a custom ConfigMap
+[id="rhdh-create-operator-custom-configmap-operator-install_{context}"]
+= Creating a custom Operator ConfigMap
 
-Create a ConfigMap, for instance `rhdh-custom-config`, for your project.
+Create a custom ConfigMap, for instance `rhdh-custom-config`, for your project.
 For more details about creating a custom ConfigMap, see the
 link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html-single/administration_guide_for_red_hat_developer_hub/index#proc-add-custom-app-config-file-ocp-operator_admin-rhdh[Adding a custom application configuration file to OpenShift Container Platform using the Operator]
 in the _Administration guide for Red Hat Developer Hub_.
@@ -28,8 +28,8 @@ kind: ConfigMap
 metadata:
   name: rhdh-custom-config
 data:
-  deployment.yaml: |-  # Replace with RHDH Operator ConfigMap deployment.yaml block
-
+  deployment.yaml: |-  
+    # Replace with RHDH Operator ConfigMap deployment.yaml block here
 ----
 . Copy the `deployment.yaml:` section from your local copy of the RHDH Operator ConfigMap.
 . Paste the `deployment.yaml:` section into the `rhdh-custom-config` ConfigMap, replacing the `deployment.yaml:` line.
