--- a/downstream/modules/devtools/proc-rhdh-create-plugin-registry.adoc
+++ b/downstream/modules/devtools/proc-rhdh-create-plugin-registry.adoc
@@ -1,9 +1,9 @@
 :_mod-docs-content-type: PROCEDURE
 
 [id="rhdh-create-plugin-registry_{context}"]
-= Creating a plug-in registry
+= Creating a registry for the {AAPRHDHShort}
 
-Set up a plug-in registry in your OpenShift cluster to host the {AAPRHDHShort} and make them available for installation in {RHDH} ({RHDHShort}).
+Set up a registry in your OpenShift cluster to host the {AAPRHDHShort} and make them available for installation in {RHDH} ({RHDHShort}).
 
 .Procedure
 
