--- a/downstream/modules/devtools/proc-rhdh-operator-add-custom-configmap-cr.adoc
+++ b/downstream/modules/devtools/proc-rhdh-operator-add-custom-configmap-cr.adoc
@@ -29,6 +29,6 @@ spec:
 // We should be able to see existing config maps that handle the app-config for rhdh instance and a different configMap that would serve the dynamic plugins that are being installed.
 
 // Considering the custom ConfigMaps are named - 
-// - rhdh-app-config  - Holds baseUrl, template config, plugin-specific config, and RBAC configuration
+// - app-config-rhdh  - Holds baseUrl, template config, plugin-specific config, and RBAC configuration
 // - rhaap-dynamic-plugins-config - contains dynamic plugins to be installed
 
