--- a/downstream/modules/devtools/proc-rhdh-uninstall-ocp-helm.adoc
+++ b/downstream/modules/devtools/proc-rhdh-uninstall-ocp-helm.adoc
@@ -1,7 +1,7 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="proc-rhdh-uninstall-ocp_{context}"]
-= Uninstalling
+[id="rhdh-uninstall-ocp-helm_{context}"]
+= Uninstalling a Helm chart installation
 
 .Procedure
 
