--- a/downstream/modules/devtools/proc-rhdh-update-plugins-helm-version-numbers.adoc
+++ b/downstream/modules/devtools/proc-rhdh-update-plugins-helm-version-numbers.adoc
@@ -1,7 +1,7 @@
 :_mod-docs-content-type: PROCEDURE
 
-[id="rhdh-update-plugins-version-numbers_{context}"]
-= Updating the Ansible plug-ins version numbers
+[id="rhdh-update-plugins-helm-version-numbers_{context}"]
+= Updating the Ansible plug-ins version numbers for a Helm installation
 
 .Procedure
 
