--- a/downstream/modules/devtools/con-rhdh-recommended-preconfig.adoc
+++ b/downstream/modules/devtools/con-rhdh-recommended-preconfig.adoc
@@ -9,8 +9,9 @@ However, you can install the {AAPRHDH} before completing these tasks.
 * link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html/authentication/index[Setting up authentication in {RHDHShort}] 
 * link:{BaseURL}/red_hat_developer_hub/{RHDHVers}/html/authorization/index[Installing and configuring RBAC in {RHDHShort}] 
 
-
-[role="_additional-resources"]
-.Additional resources
-
+[NOTE]
+====
+Red Hat provides a link:https://github.com/ansible/ansible-rhdh-templates/blob/main/all.yaml[repository of software templates for {RHDHShort}] that uses the `publish:github` action.
+To use these software templates, you must install the required GitHub dynamic plugins.
+====
 
