AAP-32260 Minor updates for the Using automation decisions guide post-2.5 GA

--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -11,7 +11,7 @@ The following procedures form the user configuration:
 * xref:eda-credential-types[Credential types]
 * xref:eda-projects[Projects]
 * xref:eda-decision-environments[Decision environments]
-* xref:simplified-event-routing[Simplfied event routing]
+* xref:simplified-event-routing[Simplified event routing]
 * xref:eda-set-up-rhaap-credential-type[Red Hat Ansible Automation Platform credential]
 * xref:eda-rulebook-activations[Rulebook activations]
 * xref:eda-rule-audit[Rule audit]
@@ -31,7 +31,7 @@ The following procedures form the user configuration:
 .Additional resources
 * For information on how to set user permissions for {EDAcontroller}, see the following in the link:{URLCentralAuth}/index[Access management and authentication guide]: 
 
-** link:{URLCentralAuth}/gw-managing-access#ref-controller-user-roles[Adding roles for a user]
-** link:{URLCentralAuth}/assembly-gw-roles[Roles]
+. link:{URLCentralAuth}/gw-managing-access#ref-controller-user-roles[Adding roles for a user]
+. link:{URLCentralAuth}/assembly-gw-roles[Roles]
 
-* If you plan to use {EDAName} 2.5 with a 2.4 {ControllerName}, see link:docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4].
+* If you plan to use {EDAName} 2.5 with a 2.4 {PlatformNameShort}, see link:docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4].
