AAP-32260 Minor corrections found when scanning the newly published Using automation decisions guide. (#2225)
* AAP-32260 Minor updates for the Using automation decisions guide post-2.5 GA

* AAP-32260 Return to previous format for controller and gateway URLs to avoid errors

--- a/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-rhaap-credential.adoc
@@ -30,9 +30,9 @@ When you select the credential type, the *Type Details* section is displayed wit
 +
 [NOTE]
 ====
-For {EDAcontroller} 2.5 with {ControllerName} 2.4, use the following example: https://<your_controller_host>
+For {EDAcontroller} {PlatformVers} with {ControllerName} 2.4, use the following example: \https://<your_controller_host>
 
-For {PlatformNameShort} {PlatformVers}, use the following example: https://<your_gateway_host>/api/controller/
+For {PlatformNameShort} {PlatformVers}, use the following example: \https://<your_gateway_host>/api/controller/
 ====
 . Enter a valid *Username* and *Password* or *Oauth Token*. 
 . Click btn:[Create credential].
