minor UI updates

--- a/downstream/assemblies/hub/assembly-delete-container.adoc
+++ b/downstream/assemblies/hub/assembly-delete-container.adoc
@@ -15,8 +15,8 @@ You can delete repositories from the {PlatformName} interface in the *Execution 
 .Procedure
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACExecEnvironments}.
-. On the container repository that you want to delete, click the btn:[More Actions] icon *{MoreActionsIcon}*, and click btn:[Delete].
-. When the confirmation message is displayed, click the checkbox and click btn:[Delete].
+. On the container repository that you want to delete, click the btn:[More Actions] icon *{MoreActionsIcon}*, and click btn:[Delete {ExecEnvShort}].
+. When the confirmation message is displayed, click the checkbox and click btn:[Delete {ExecEnvShort}].
 
 .Verification
 * Return to the *{ExecEnvName}s* list view.
