--- a/downstream/modules/hub/con-container-registry.adoc
+++ b/downstream/modules/hub/con-container-registry.adoc
@@ -12,7 +12,7 @@ When you have built or sourced an {ExecEnvShort}, you can push that {ExecEnvShor
 [role="_additional-resources"]
 .Next steps
 
-* Push a {ExecEnvShort} to the {HubName} remote registry.
+* Push an {ExecEnvShort} to the {HubName} remote registry.
 * Create a group with access to the container repository in the registry.
 * Add the new group to the container repository.
 * Add a README to the container repository to provide users with information and relevant links.
