--- a/downstream/modules/hub/proc-add-container-readme.adoc
+++ b/downstream/modules/hub/proc-add-container-readme.adoc
@@ -29,7 +29,7 @@ By default, the README is empty.
 
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACExecEnvironments}.
-. Select your container repository.
+. Select your {ExecEnvShort}.
 . On the *Detail* tab, click btn:[Add].
 . In the *Raw Markdown* text field, enter your README text in Markdown.
 . Click btn:[Save] when you are finished.
