--- a/downstream/modules/hub/proc-approve-collection.adoc
+++ b/downstream/modules/hub/proc-approve-collection.adoc
@@ -16,8 +16,7 @@ You can approve collections uploaded to individual namespaces for internal publi
 +
 Collections requiring approval have the status *Needs review*.
 +
-. Select a collection to review.
-. Click the *Version* to view the contents of the collection.
-. Click btn:[Certify] to approve the collection.
+. Find the collection you want to review in the list. You can also filter collections by Namespace, Repository, and Status using the search bar.
+. Click the thumbs up icon to approve and sign the collection. Confirm your choice in the modal that appears.
 
 Approved collections are moved to the *Published* repository where users can view and download them for use.
