--- a/downstream/modules/hub/proc-create-credential.adoc
+++ b/downstream/modules/hub/proc-create-credential.adoc
@@ -9,16 +9,16 @@ On {PlatformNameShort} 2.0 and later, the system operates as if you already have
 To store {ExecEnvShort} images, add the credentials of only your selected remote registries.
 
 .Procedure
-// For 2.5 this will be Log in to Ansible Automation Platform. From the navigation panel select Access Management > Credentials. Select the Automation Execution tab
+
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuAECredentials}.
-. Click btn:[Add] to create a new credential.
+. Click btn:[Create credential] to create a new credential.
 . Enter an authorization *Name*, *Description*, and *Organization*.
-. Select the *Credential Type*.
+. In the *Credential Type* drop-down, select *Container Registry*. 
 . Enter the *Authentication URL*. This is the remote registry address.
 . Enter the *Username* and *Password or Token* required to log in to the remote registry.
 . Optional: To enable SSL verification, select *Verify SSL*.
-. Click btn:[Save].
+. Click btn:[Create credential].
 
 Filling in at least one of the fields organization, user, or team is mandatory, and can be done through the user interface.
 
