--- a/downstream/modules/hub/proc-push-container.adoc
+++ b/downstream/modules/hub/proc-push-container.adoc
@@ -43,7 +43,8 @@ This may lead to image-layer digest changes and a failed push operation, resulti
 .Verification
 
 . Log in to your {PlatformNameShort}.
-//[ddacosta] I see no such selection. Should this be changed to Execution Environments > Remote Registries? If so, replace with {MenuACAdminRemoteRegistries}
-. Navigate to {MenuACAdminRemoteRegistries}.
+//[ddacosta] I see no such selection. Should this be changed to Execution Environments > Remote Registries? If so, replace with {MenuACAdminRemoteRegistries} 
+// [hherbly] I think it's {MenuACExecEnvironments} based on the context but need to double check. 
+. Navigate to {MenuACExecEnvironments}.
 
 . Locate the container in the container repository list.
