--- a/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
+++ b/downstream/modules/hub/proc-pushing-container-images-from-your-local.adoc
@@ -44,11 +44,12 @@ The details page for each {ExecEnvName} indicates whether it has been signed. If
 
 . Click the btn:[More Actions] icon *{MoreActionsIcon}*.
 Three options are available:
+* *Sign {ExecEnvShort}*
 * *Use in Controller*
-* *Delete*
-* *Sign*
+* *Delete {ExecEnvShort}*
 
-. Click *Sign* from the drop-down menu.
+
+. Click *Sign {ExecEnvShort}* from the drop-down menu.
 
 The signing service signs the {ExecEnvName}.
 After the {ExecEnvName} is signed, the status changes to "signed".
