--- a/downstream/modules/hub/proc-reject-collections.adoc
+++ b/downstream/modules/hub/proc-reject-collections.adoc
@@ -4,7 +4,7 @@
 
 You can reject collections uploaded to individual namespaces. All collections awaiting review are located in {MenuACAdminCollectionApproval}.
 
-Collections requiring approval have the status *Needs review*. Click the *Version* to view the contents of the collection.
+Collections requiring approval have the status *Needs review*. 
 
 .Prerequisites
 
@@ -13,7 +13,7 @@ Collections requiring approval have the status *Needs review*. Click the *Versio
 .Procedure
 
 . From the navigation panel, select {MenuACAdminCollectionApproval}.
-. Locate the collection to review.
-. Click btn:[Reject] to decline the collection.
+. Find the collection you want to review in the list. You can also filter collections by Namespace, Repository, and Status using the search bar.
+. Click the thumbs down icon to approve and sign the collection. Confirm your choice in the modal that appears.
 
 Collections you decline for publication are moved to the *Rejected* repository.
