--- a/downstream/modules/hub/proc-revert-repository-version.adoc
+++ b/downstream/modules/hub/proc-revert-repository-version.adoc
@@ -13,4 +13,4 @@ When automation content collections are added or removed from a repository, a ne
 . From the navigation panel, select {MenuACAdminRepositories}.
 . Click into your repository in the list and then select the *Versions* tab.
 . Locate the version you want to revert to and click the btn:[More Actions] icon *{MoreActionsIcon}*, and select *Revert to this version*.
-. Click btn:[Revert].
+. Check the box confirming your selection, and then click btn:[Revert to repository version].
