--- a/downstream/modules/hub/proc-sync-image.adoc
+++ b/downstream/modules/hub/proc-sync-image.adoc
@@ -26,7 +26,7 @@ Set a rate limit under *Advanced Options*.
 +
 . From the navigation panel, select {MenuACExecEnvironments}.
 
-. Click btn:[Add execution environment] in the page header.
+. Click btn:[Create execution environment] in the page header.
 
 . Select the registry you want to pull from.
 The *Name* field displays the name of the {ExecEnvName} displayed on your local registry.
