--- a/downstream/modules/hub/proc-tag-image.adoc
+++ b/downstream/modules/hub/proc-tag-image.adoc
@@ -14,12 +14,11 @@ Tag {ExecEnvName}s to add an additional name to {ExecEnvName}s stored in your {H
 .Procedure
 
 . From the navigation panel, select {MenuACExecEnvironments}.
-. Select {ExecEnvName}.
+. Select your {ExecEnvName}.
 . Click the *Images* tab.
 . Click the btn:[More Actions] icon *{MoreActionsIcon}*, and click btn:[Manage tags].
 . Add a new tag in the text field and click btn:[Add].
 . Optional: Remove *current tags* by clicking btn:[x] on any of the tags for that image.
-. Click btn:[Save].
 
 .Verification
 * Click the *Activity* tab and review the latest changes.
