--- a/downstream/modules/hub/con-approval-pipeline.adoc
+++ b/downstream/modules/hub/con-approval-pipeline.adoc
@@ -12,7 +12,7 @@ Auto approval::
 When auto approve is enabled, any collection you upload to a staging repository is automatically promoted to all of the repositories marked as `pipeline=approved`.
 
 Approval required::
-When auto approve is disabled, the administrator can view the approval dashboard and see collections that have been uploaded into any of the staging repositories. Clicking btn:[Approve] displays a list of approved repositories. From this list, the administrator can select one or more repositories to which the content should be promoted.
+When auto approve is disabled, the administrator can view the approval dashboard and see collections that have been uploaded into any of the staging repositories. Sorting by *Approved* displays a list of approved repositories. From this list, the administrator can select one or more repositories to which the content should be promoted.
 +
 If only one approved repository exists, the collection is automatically promoted into it and the administrator is not prompted to select a repository.
 
