--- a/downstream/modules/hub/proc-export-collection.adoc
+++ b/downstream/modules/hub/proc-export-collection.adoc
@@ -11,5 +11,5 @@ After collections are finalized, you can import them to a location where they ca
 
 . Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACCollections}. The *Collections* page displays all collections across all repositories. You can search for a specific collection.
-. Select the collection that you want to export. The collection details page opens.
+. Click into the collection that you want to export. The collection details page opens.
 . From the *Install* tab, select *Download tarball*. The .tar file is downloaded to your default browser downloads folder. You can now import it to the location of your choosing.
