Add bundle 2.4-7.4 to release notes
Add bundle 2.4-7.4 to release notes

AAP 2.4-7.4 Release notes

https://issues.redhat.com/browse/AAP-31819

--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -43,6 +43,7 @@ include::topics/rpm-24-2.adoc[leveloffset=+3]
 
 include::topics/installer-version-table.adoc[leveloffset=+3]
 
+include::topics/installer-24-74.adoc[leveloffset=+3]
 include::topics/installer-24-73.adoc[leveloffset=+3]
 include::topics/installer-24-72.adoc[leveloffset=+3]
 include::topics/installer-24-71.adoc[leveloffset=+3]
