--- a/downstream/titles/release-notes/topics/installer-version-table.adoc
+++ b/downstream/titles/release-notes/topics/installer-version-table.adoc
@@ -6,6 +6,13 @@
 |===
 | Installation bundle | Component versions
 
+| xref:installer-24-74[2.4-7.4] + 
+October 01, 2024  | 
+* `ansible-core` 2.15.12
+* {ControllerNameStart} 4.5.12
+* {HubNameStart} 4.9.2
+* {EDAName} 1.0.7
+
 | xref:installer-24-73[2.4-7.3] + 
 September 19, 2024  | 
 * `ansible-core` 2.15.12
