Update git to git-core in containerized install
Please correct the recommendation to install "git-core" instead of "git". Thanks.

Suboptimal troubleshooting hint

https://issues.redhat.com/browse/AAP-32261

--- a/downstream/modules/platform/proc-preparing-the-rhel-host-for-containerized-installation.adoc
+++ b/downstream/modules/platform/proc-preparing-the-rhel-host-for-containerized-installation.adoc
@@ -38,10 +38,10 @@ link:{BaseURL}/red_hat_enterprise_linux/9/html/managing_software_with_the_dnf_to
 sudo dnf install -y ansible-core
 ----
 +
-. Optional: You can install additional utilities that can be useful for troubleshooting purposes, for example `wget`, `git`, `rsync`, and `vim`:
+. Optional: You can install additional utilities that can be useful for troubleshooting purposes, for example `wget`, `git-core`, `rsync`, and `vim`:
 +
 ----
-sudo dnf install -y wget git rsync vim
+sudo dnf install -y wget git-core rsync vim
 ----
 +
 . Set a hostname that is a fully qualified domain name (FQDN):
